-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.0.3
-
None
-
Windows 10
If I customize shortcuts, work for a while, and QtCreator crashes for some reason, my keyboard customizations are lost.
I would expect the changes to be saved persistently when I "apply" or "ok" from the Options Dialog.
For Gerrit Dashboard: QTCREATORBUG-16576 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
170244,2 | Core: Fix that core settings like shortcuts were only saved at shutdown | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |