Core: Fix that core settings like shortcuts were only saved at shutdown

Save them also whenever a settings save is requested, which e.g. also
happens when closing the options dialog.

Change-Id: Ic20f1007381a4d0a8157f17fd24c0d8ea24907ee
Task-number: QTCREATORBUG-16576
Reviewed-by: David Schulz <david.schulz@qt.io>